--- a/index.html
+++ b/index.html
@@ -217,17 +217,17 @@
                         <div class="skills-info">
                           <h4>HTML5/CSS3</h4>                               
                           <div class="skill-container">
-                            <div class="skill-percentage skill-1"></div>
+                            <div class="skill-percentage skill-5"></div>
                           </div>
 
                           <h4>Javascript/Typescript</h4>                               
                           <div class="skill-container">
-                            <div class="skill-percentage skill-1"></div>
+                            <div class="skill-percentage skill-7"></div>
                           </div>
 
                           <h4>React.js</h4>
                           <div class="skill-container">
-                            <div class="skill-percentage skill-2"></div>
+                            <div class="skill-percentage skill-3"></div>
                           </div>
 
                         </div>
@@ -238,23 +238,23 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Coding <span>Skills</span></h3>
+                          <h3>Backend <span>Skills</span></h3>
                         </div>
 
                         <div class="skills-info">
                           <h4>JAVA EE</h4>                               
                           <div class="skill-container">
-                            <div class="skill-percentage skill-4"></div>
+                            <div class="skill-percentage skill-3"></div>
                           </div>
 
                           <h4>Node.js/Express</h4>
                           <div class="skill-container">
-                            <div class="skill-percentage skill-5"></div>
+                            <div class="skill-percentage skill-6"></div>
                           </div>
                           
                           <h4>SQL</h4>
                           <div class="skill-container">
-                            <div class="skill-percentage skill-5"></div>
+                            <div class="skill-percentage skill-6"></div>
                           </div>
 
                         </div>
